--- a/index.html
+++ b/index.html
@@ -17,8 +17,27 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/7d1c6e55a2.js"></script>
     <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet">
+    <style>
+      .main {
+          padding: 20px;
+      }
 
+      @media (min-width: 768px) {
+          .main {
+              padding-right: 40px;
+              padding-left: 40px;
+          }
+      }
+
+      .main .page-header {
+          margin-top: 0;
+      }
+
+      .alert-group {
+          margin-top: 20px;
+      }
+
+    </style>
 </head>
 
 <body>
